--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1 class="heading">To Do</h1>
                 <input type="button" value="Add" id="add-button">   
             </div>
-            <input type="text" name="input" id="input" data-new-item class="input-new" placeholder="Input here"> 
+            <input type="text" name="input" id="input" data-new-item class="input-new" placeholder="Type here"> 
             <p class="errMsg"></p>  
         </div>
         <div class="list">
