--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="input">
             <div class="header">
                 <h1 class="heading">To Do</h1>
-                <input type="button" value="Add" id="add-button" tabindex="1">   
+                <input type="button" value="Add" id="add-button" tabindex="2"">   
             </div>
-            <input type="text" name="input" id="input" data-new-item class="input-new" placeholder="Type here" tabindex="2"> 
+            <input type="text" name="input" id="input" data-new-item class="input-new" placeholder="Type here" tabindex="1"> 
             <p class="errMsg"></p>  
         </div>
         <div class="list">
