--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 </head>
 <body>
     <div class="card">
-        <div class="input">
+        <div class="header-container">
             <div class="header">
-                <h1 class="heading">To Do</h1>
-                <input type="button" value="Add" id="add-button" tabindex="2"">   
+                <h1 class="heading">TO-DO</h1>
             </div>
-            <input type="text" name="input" id="input" data-new-item class="input-new" placeholder="Type here" tabindex="1"> 
+            <div class="form">
+                <input type="text" name="input" id="input" data-new-item class="input" placeholder="Enter Task" tabindex="1"> 
+                <input type="button" value="+" id="add-button" tabindex="2">   
+            </div>
             <p class="errMsg"></p>  
         </div>
         <div class="list">
