--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="list">
             <ul class="saved-list">
-                <p class="empty"></p>
+                <p class="empty">No list to show</p>
             </ul>
         </div>
     </div>
