--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <div class="header-container">
             <div class="header">
                 <h1 class="heading">TO-DO</h1>
+                <div class="indicator">
+                    <p class="task-number"></p>
+                    <p></p>
+                </div>
             </div>
             <div class="form">
                 <input type="text" name="input" id="input" data-new-item class="input" placeholder="Enter Task" tabindex="1"> 
