Made some minor changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="card">
         <div class="header-container">
             <div class="header">
-                <h1 class="heading">TO-DO</h1>
+                <h1 class="heading">To-do list</h1>
             </div>
             <div class="form">
                 <input type="text" name="input" id="input" data-new-item class="input" placeholder="Enter new task" tabindex="1"> 
