--- a/index.html
+++ b/index.html
@@ -8,28 +8,30 @@
     <link rel="shortcut icon" href="image/todo.png" type="image/png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    <div class="card">
-        <div class="header-container">
-            <div class="header">
-                <h1 class="heading">To-do list</h1>
-            </div>
-            <div class="form">
-                <input type="text" name="input" id="input" data-new-item class="input" placeholder="Enter new task" tabindex="1"> 
-                <input type="button" value="+" id="add-button" tabindex="2">   
-            </div>
+    <div class="header">
+        <p class="task-number"></p>
+        <button class="clear-btn">Clear all</button>
+    </div>
+    <div class="main-header-container">
+        <div class="main-heading">
+            <h1 class="heading">To-do list</h1>
         </div>
+        <div class="form">
+            <input type="text" name="input" id="input" data-new-item class="input" placeholder="Enter new task" tabindex="1"> 
+            <input type="button" value="+" id="add-button" tabindex="2">   
+        </div>
+    </div>
+    <div class="list-container">
         <div class="list">
             <ul class="saved-list">
                 <p class="empty">No list to show</p>
             </ul>
         </div>
-        <div class="footer">
-            <p class="task-number"></p>
-            <button class="clear">Clear all</button>
-        </div>
+        
     </div>
     <script src="javascript/script.js"></script>
 </body>
