--- a/index.html
+++ b/index.html
@@ -13,26 +13,34 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
-    <div class="header">
-        <p class="task-number"></p>
-        <button class="clear-btn">Clear all</button>
-    </div>
-    <div class="main-header-container">
-        <div class="main-heading">
-            <h1 class="heading">To-do list</h1>
+    <div class="main-container">
+        <div class="header-container">
+            <div>
+                <p class="fas fa-clipboard-check" id="task-number"></p>
+            </div>
+            <div>
+                <button class="clear-btn">Clear all</button>
+            </div>
         </div>
-        <div class="form">
-            <input type="text" name="input" id="input" data-new-item class="input" placeholder="Enter new task" tabindex="1"> 
-            <input type="button" value="+" id="add-button" tabindex="2">   
+        <div class="main-header-container">
+            <div class="main-heading">
+                <h1 class="heading">To-do list</h1>
+            </div>
+            <div class="form">
+                <input type="text" name="input" id="input" data-new-item class="input" placeholder="Enter new task" tabindex="1"> 
+                <input type="button" value="+" id="add-button" tabindex="2">   
+            </div>
         </div>
-    </div>
-    <div class="list-container">
-        <div class="list">
-            <ul class="saved-list">
-                <p class="empty">No list to show</p>
-            </ul>
+        <div class="list-container">
+            <div class="list">
+                <ul class="saved-list">
+                    <p class="empty">No list to show</p>
+                </ul>
+            </div>
         </div>
-        
+        <div class="footer">
+            <h4 class="far fa-copyright footer-text">Joshua Mondoy</h4>
+        </div>
     </div>
     <script src="javascript/script.js"></script>
 </body>
