--- a/index.html
+++ b/index.html
@@ -14,13 +14,9 @@
 </head>
 <body>
     <div class="main-container">
-        <div class="header-container">
-            <div>
-                <p class="fas fa-clipboard-check" id="task-number"></p>
-            </div>
-            <div>
-                <button class="clear-btn">Clear all</button>
-            </div>
+        <div class="header">
+            <p class="fas fa-clipboard-check" id="task-number"></p>
+            <button class="clear-btn">Clear all</button>
         </div>
         <div class="main-header-container">
             <div class="main-heading">
@@ -39,7 +35,7 @@
             </div>
         </div>
         <div class="footer">
-            <h4 class="far fa-copyright footer-text">Joshua Mondoy</h4>
+            <p class="far fa-copyright">Joshua Mondoy</p>
         </div>
     </div>
     <script src="javascript/script.js"></script>
