--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="main-container">
         <div class="header">
-            <p class="fas fa-clipboard-check" id="task-number"></p>
+            <p id="task-number"></p>
             <button class="clear-btn">Clear all</button>
         </div>
         <div class="main-header-container">
@@ -33,9 +33,6 @@
                     <p class="empty">No list to show</p>
                 </ul>
             </div>
-        </div>
-        <div class="footer">
-            <p class="far fa-copyright">Joshua Mondoy</p>
         </div>
     </div>
     <script src="javascript/script.js"></script>
