--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </div>
     <div class="clear-btn-container">
-        <button class="far fa-trash-alt clear-btn"></button>
+        <button class="far fa-trash-alt fa-lg clear-btn"></button>
    </div>
     <script src="javascript/script.js"></script>
 </body>
