--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="main-container">
         <div class="header">
-            <p id="task-number"></p>
+            <p id="task-number" class="fas fa-tasks"></p>
         </div>
         <div class="main-header-container">
             <div class="main-heading">
