--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <body>
     <div class="main-container">
         <div class="header">
-            <p id="task-number" class="fas fa-tasks"></p>
+            <i class="fas fa-tasks fa-lg task-number-icon"></i>
+            <p id="task-number"></p>
         </div>
         <div class="main-header-container">
             <div class="main-heading">
                 <h1 class="heading">TO-DO LIST</h1>
-                <p class="date-time">Saturday, June 06, 2021</p>
+                <p class="date-time">Saturday, June 06 2021</p>
             </div>
             <div class="form">
                 <input type="text" name="input" id="input" data-new-item class="input" placeholder="Enter new task" tabindex="1"> 
